# coagent-openai-mock

./: Cargo.toml  README.md
.kiro/specs/openai-api-mock/: design.md  requirements.md  tasks.md
docs/: TESTING_WITH_PORTPICKER.md  request_models.md
examples/: completion_generator.rs  embedding_generator.rs  generators_combined.rs  handlers_example.rs  json_output.rs
src/: auth.rs  config.rs  lib.rs  server.rs
src/generators/: chat_completions.rs  completions.rs  embeddings.rs  mod.rs
src/handlers/: chat_completions.rs  completions.rs  embeddings.rs  mod.rs
src/models/: mod.rs  requests.rs  responses.rs
tests/: portpicker_examples.rs  request_models_integration.rs  server_integration.rs
tests/common/: mod.rs
